[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scenes/Weapons/Shield/Shield.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Characters/Enemy Base/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/SpriteSheets/Enemies/Sprite-tank-enemy.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Characters/Enemies/Tank/Tank1.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Characters/Enemies/Tank/Tank1FSM.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Shaders/FlashShader.tres" type="Material" id=7]
[ext_resource path="res://Scenes/Effects/Dust/Dust.tscn" type="PackedScene" id=8]

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 4 )
region = Rect2( 50, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 4 )
region = Rect2( 0, 150, 50, 50 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 4 )
region = Rect2( 50, 150, 50, 50 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 4 )
region = Rect2( 100, 150, 50, 50 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 4 )
region = Rect2( 150, 150, 50, 50 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 4 )
region = Rect2( 200, 150, 50, 50 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 4 )
region = Rect2( 0, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 4 )
region = Rect2( 50, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 4 )
region = Rect2( 100, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 4 )
region = Rect2( 150, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 0, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 50, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 100, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 150, 100, 50, 50 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "Idle",
"speed": 4.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": false,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "Walk",
"speed": 4.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "Tired",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 8, 3.5 )

[sub_resource type="Animation" id=25]
resource_name = "Death"
length = 0.9
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Death" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.75, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "spawn_explosion"
}, {
"args": [  ],
"method": "drop_weapon"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=22]
resource_name = "Hurt"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=24]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=17]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:material:shader_param/flash_modifier")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=26]
resource_name = "Tired"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Tired" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=20]
resource_name = "Walk"
length = 1.2
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="Tank1" instance=ExtResource( 2 )]
collision_layer = 8
script = ExtResource( 5 )
HP = 4.0
max_speed = 70
kill_points = 150
shield_scene = ExtResource( 1 )
dust_scene = ExtResource( 8 )
max_attack_times = 3

[node name="FiniteStateMachine" parent="." index="0"]
script = ExtResource( 6 )

[node name="AnimatedSprite" parent="." index="1"]
material = ExtResource( 7 )
frames = SubResource( 23 )
animation = "Idle"
offset = Vector2( 0, -20 )

[node name="Hurtbox" parent="AnimatedSprite" index="0"]
position = Vector2( 0, -20 )
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2( 0, -5.5 )
shape = SubResource( 21 )

[node name="AnimationPlayer" parent="." index="3"]
anims/Death = SubResource( 25 )
anims/Hurt = SubResource( 22 )
anims/Idle = SubResource( 24 )
anims/RESET = SubResource( 17 )
anims/Tired = SubResource( 26 )
anims/Walk = SubResource( 20 )

[node name="TiredTimer" type="Timer" parent="." index="6"]
wait_time = 2.0

[node name="Weapons" type="Node2D" parent="." index="7"]

[node name="Shield" parent="Weapons" index="0" instance=ExtResource( 1 )]
visible = false

[node name="Hitbox" parent="Weapons/Shield/Node2D/AnimatedSprite" index="0"]
collision_mask = 4

[node name="Eyes" parent="." index="8"]
position = Vector2( 0, -28 )

[node name="EyeL" parent="Eyes" index="0"]
offset = Vector2( -2, 0 )

[node name="EyeR" parent="Eyes" index="1"]
offset = Vector2( 4, 0 )

[connection signal="timeout" from="TiredTimer" to="." method="_on_TiredTimer_timeout"]
[connection signal="animation_finished" from="Eyes/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Weapons/Shield"]
